--- a/app/src/main/res/layout/subchapter_list.xml
+++ b/app/src/main/res/layout/subchapter_list.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="c.ponom.PocketLibrary.View.MainActivity">
+    tools:context="c.ponom.pocketlibrary.View.MainActivity">
 
 
 
 
 
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMain"
         android:orientation="vertical"
         android:layout_width="match_parent"
