--- a/app/src/main/res/layout/book_item_new.xml
+++ b/app/src/main/res/layout/book_item_new.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="72dp"
     android:orientation="horizontal">
 
 
@@ -34,14 +34,14 @@
         />
 
     <TextView
-    android:id="@+id/sizeInBooks"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:id="@+id/sizeInBooks"
+        android:layout_width="70dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    />
+        android:layout_marginEnd="16dp"
+        android:gravity="end"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/loadBookIcon"
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/load_book"
         android:layout_marginEnd="16dp"
-        android:src="@android:drawable/stat_sys_download_done"
+        android:src="@android:drawable/checkbox_off_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sizeInBooks" />
 
