--- a/app/src/main/res/layout/start_screen.xml
+++ b/app/src/main/res/layout/start_screen.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="c.ponom.pocketlibrary.View.SingleActivity">
+    tools:context="c.ponom.pocketlibrary.ui.SingleActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/main_toolbar"
