--- a/app/src/main/res/layout/subchapter_list.xml
+++ b/app/src/main/res/layout/subchapter_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="c.ponom.pocketlibrary.View.SingleActivity">
+    tools:context="c.ponom.pocketlibrary.ui.SingleActivity">
 
 
 
