--- a/app/src/main/res/layout/info_fragment.xml
+++ b/app/src/main/res/layout/info_fragment.xml
@@ -2,18 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-
-    >
+    android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/info_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/information_screen"
-        android:id="@+id/info_text"/>
-
-
+        android:text="@string/information_screen" />
 
 
 </FrameLayout>
